<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient1"
    tools:context=".CalibrationActivity">

    <TextView
        android:id="@+id/title_calibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/calibration"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@color/teal_200"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/thumb"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_calibration"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        style="@style/CardView2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_calibration"
            android:padding="15dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calibration_buttons_desc"
            android:layout_marginTop="90dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_shape"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onCalibrationClick"
        android:paddingVertical="15dp"
        android:layout_marginTop="70dp"
        android:text="@string/start_calibration"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopButton"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/btn_shape"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onStopClick"
        android:paddingVertical="15dp"
        android:text="@string/stop_calibration"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calibrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_shape"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onHearSound"
        android:paddingVertical="15dp"
        android:text="@string/hear_sound"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>